split up index.html.erb bc it was super long and gross

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -157,81 +157,10 @@
                     </div><!--/.well -->
                 </div><!--/span-->
 
+<!-- *********** modal is in views/home/_modal.html.erb ****************-->
+        <%= render "modal" %>
 
 
-<!--************************ New Trial Modal ****************************-->
-
-<div id="addTrialModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3 id="myModalLabel">Add a trial</h3>
-  </div>
-
-  <div class="modal-body" height="500px">
-    <div class = "row-fluid">
-    <div class="span5" style ="padding-left:15px;">
-    <h4>Link an existing Trial</h4>
-    <input class="span8" type="text" placeholder="Trial Name" data-provide="typeahead" data-source='["sean", "nikhil", "dan", "ashwin", "shiv"]'>
-  </div>
-    
-
-  <div class="span6" style = "margin-bottom:15px; padding-left:30px; border-left: 1px solid #eeeeee">
-    <h4>Create a new Trial</h4>
-    <form>
-        <fieldset>
-            <input class="span8" type="text" placeholder="Trial Name">
-
-            <div class="input-append">
-                <input class="span8" type="text" placeholder="Invite Someone" id="appendedInputButton" type="text">
-                <button class="btn" type="button">+</button>
-            </div>
-
-            <span class="help-block">*Optional - Enter a valid email</span>
-
-
-<!-- ****************** Advanced Options ***********************-->
-
-
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">
-  Advanced Options
-</button>
- 
-<div id="demo" class="collapse">
-    <p>Default Criteria:</p>
-        <p>Enrolled</p>
-    </div>
-    <p></p>
-
-<!-- ****************** End Advanced Options ***********************-->
-
-
-
-
-        </fieldset>
-    
-    <button type="submit" class="btn">Submit</button>
-</form>
-
-  </div>
-</div>
-
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    <button class="btn btn-primary" id = "addTrial" data-dismiss="modal">Add Trial</button>
-  </div>
-</div>
-</div>
-
-<script type="text/javascript">
-
-function allTrials(query, process) {
-                var data = ["sean", "nikhil", "dan", "ashwin", "shiv"];
-                return data;
-
-}
-
-</script>
-<!--**************** End Modal  ************************************-->
 
                 <div class="span9">
                     
@@ -247,213 +176,17 @@ function allTrials(query, process) {
                         <div class="tab-content">
 
 
+<!-- *********** View Trends is in views/home/_view_trends.html.erb ****************-->
+       <%= render "view_trends" %>                     
                             
-                            
-    <!--************************* begin View Trends ******************** -->
-                            
-    <div class="tab-pane fade in active" id="home">
-
-<div class="row-fluid">
-<div class= "span8">
-        <h4>Subjects</h4> 
-
-        <div id="bar_chart" style="display:inline; float:left"></div>
-    </div>
-    <div class = "span4">
-
-        <table class="table table-condensed table-hover" style="display:inline; float:right; margin-top:10px">
-            <tr style="border-top: 2px solid #ccc;"><th style = "font-size:14px;">Total Subjects</th><td style = "font-size:14px; text-align: right;">4856</td></tr>
-            <tr><th style = "font-size:14px">Trial Period</th><td style = "font-size:14px; text-align: right;">Jan 1st - July 14th</td></tr>
-            <tr><th style = "font-size:14px">CRC's:</th><td style = "font-size:14px; text-align: right;">Harry Potter</td></tr>
-            <tr><th></th><td style = "font-size:14px; text-align: right;"> Bob Loblaw</td></tr>
-            <tr><th></th><td style = "font-size:14px; text-align: right;"> Jerry Garcia</td></tr>
-</table>
-
-</div>
-</div> <!-- end row -->
-
-        <div class = "span11" style="border-bottom: 1px solid #ddd; margin-bottom:20px;"> </div>
-
-
-
-
-<ul class="nav nav-pills">
-  <li class="active">
-    <a href="#enrolled" data-toggle="pill">Enrolled</a>
-  </li>
-  <li><a href="#withdrawn" data-toggle="pill">Withdrawn</a></li>
-  <li><a href="#vulnerable" data-toggle="pill">Vulnerable</a></li>
-</ul>
-
-<!-- start tab content -->
-
-<div class="tab-content">
-    <div class="tab-pane fade in active" id="enrolled">
-
-<div class="row-fluid">
-    <div class= "span8">
-
-        <h4>Subjects Enrolled</h4> 
-         <div id="line_chart"></div>
-     </div>
-     <div class= "span4">
-
-         <table class="table table-condensed table-hover" style="display:inline; float:right; margin-top:10px">
-            <tr style="border-top: 2px solid #ccc;"><th style = "font-size:14px;">Total Enrolled</th><td style = "font-size:14px; text-align: right;">4856</td></tr>
-            <tr><th style = "font-size:14px">Avg/Month</th><td style = "font-size:14px; text-align: right;">43.5</td></tr>
-            <tr><th style = "font-size:14px">Avg/Week</th><td style = "font-size:14px; text-align: right;">11.3</td></tr>
-            <tr><th style = "font-size:14px">Est. by July 14th</th><td style = "font-size:14px; text-align: right;"> 5700</td></tr>
-</table>
-</div>
-</div>
-     </div> <!-- end Enrolled content -->
-
-
-     <div class="tab-pane fade" id="withdrawn">
-        <h4>Subjects Withdrawn</h4> 
-         <div id="line_chart_withdrawn"></div>
-     </div>
-
-
-     <div class="tab-pane fade" id="vulnerable">
-        <h4>Subjects Vulnerable</h4> 
-            <div id="line_chart_vulnerable"></div>
-     </div>
-         
-    </div> <!-- end tab content -->
-
-</div>
                             
                             
     <!--*************************** begin Edit Data ******************** -->                     
-                            
-        <div class="tab-pane fade" id="edit">
-                            
-            <form class="form-inline">
-                <input type="text" class="input-small" placeholder="1">
-                    <div class="btn-group" data-toggle="buttons-checkbox">
-                        <button type="button" class="btn btn-primary">Enrolled</button>
-                        <button type="button" class="btn btn-primary">Vulnerable</button>
-                        <button type="button" class="btn btn-primary">Refused</button>
-                        <button type="button" class="btn btn-primary">Withdrawn</button>
-                        <button type="button" class="btn btn-primary">Lost</button>
-                    </div>
-                    
-                    <button type="submit" class="btn btn-success">Add Subject(s)</button>
-                    </form>
-            
-            
-            
-            <table class = "table table-hover table-condensed table-bordered" style = "font-size:14px" id="data_table">
                 
-                <thead>
-                    <tr>
-                        <th style="text-align: left;">Subject</th>
-                        <th>Enrolled</th>
-                        <th>Vulnerable</th>
-                        <th>Refused</th>
-                        <th>Withdrawn</th>
-                        <th>Lost</th>
-                    </tr>
-                </thead>
-                <tr>
-                    <td style="text-align: left;">D111<a style = "float:right; font-size:13px" href="#">edit</a>
-                      <i style = "float:right" class="icon-pencil"></i></td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#d9edf7">No</td>
+<!-- *********** Edit Data is in views/home/_edit_data.html.erb ****************-->
+       <%= render "edit_data" %> 
 
-                </tr>
-                <tr>
-                    <td style="text-align: left;">D112<a style = "float:right; font-size:13px" href="#">edit  </a>
-                      <i style = "float:right " class="icon-pencil"></i></td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                </tr>                                </tr>
-                <tr>
-                    <td style="text-align: left;">D113<a style = "float:right; font-size:13px" href="ff">edit</a>
-                      <i style = "float:right " class="icon-pencil"></i></td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">D114<a style = "float:right; font-size:13px" href="#">edit</a>
-                      <i style = "float:right " class="icon-pencil"></i></td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">D115<a style = "float:right; font-size:13px" href="#">edit</a>
-                      <i style = "float:right " class="icon-pencil"></i></td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">D116<a style = "float:right; font-size:13px" href="#">edit</a>
-                      <i style = "float:right " class="icon-pencil"></i></td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">D117<a style = "float:right; font-size:13px" href="#">edit</a>
-                      <i style = "float:right " class="icon-pencil"></i></td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">D118<a style = "float:right; font-size:13px" href="#">edit</a>
-                      <i style = "float:right " class="icon-pencil"></i></td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">D119<a style = "float:right; font-size:13px" href="#">edit</a>
-                      <i style = "float:right " class="icon-pencil"></i></td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                </tr>
-                <tr>
-                    <td style="text-align: left;">D120<a style = "float:right; font-size:13px" href="#">edit</a>
-                      <i style = "float:right " class="icon-pencil"></i></td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#D0F0C2">Yes</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                    <td style = "background-color:#d9edf7">No</td>
-                </tr>
-            </table>
-            
-            
-        </div>
-                            
-                            
-          <!--**************** end Edit Data ******************** -->
+        
                             
                             
                             <div class="tab-pane fade" id="report">...</div>
