Got a test controller method working!

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -161,7 +161,7 @@
         <%= render "modal" %>
 
 
-
+<%= link_to 'Join', join_event_path %>
                 <div class="span9">
                     
                     <div class="hero-unit">
@@ -181,7 +181,7 @@
                             
                             
                             
-    <!--*************************** begin Edit Data ******************** -->                     
+                     
                 
 <!-- *********** Edit Data is in views/home/_edit_data.html.erb ****************-->
        <%= render "edit_data" %> 
