--- a/app/views/home/_modal.html.erb
+++ b/app/views/home/_modal.html.erb
@@ -36,8 +36,8 @@
 </button>
  
 <div id="demo" class="collapse">
-    <p>Default Criteria:</p>
-        <p>Enrolled</p>
+    <p>More Options Here</p>
+       
     </div>
     <p></p>
 
