--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -99,8 +99,40 @@
 
                 var chart = new google.visualization.LineChart(document.getElementById('line_chart'));
                 chart.draw(data, options);
+
+
+var data2 = new google.visualization.DataTable();
+
+                data2.addColumn('date', 'Day');
+                data2.addColumn('number', 'Withdrawn');
+                data2.addColumn('number', 'Projected');
+
+                data2.addRows([
+                  [new Date(2012, 0, 1),  50,      50],
+                  [new Date(2012, 0, 2),  62,      55],
+                  [new Date(2012, 0, 3),  70,      60],
+                  [new Date(2012, 0, 4),  72,      65],
+                  [new Date(2012, 0, 5),  78,      70],
+                  [new Date(2012, 0, 6),  86,      75],
+                  [new Date(2012, 0, 7),  90,      80],
+                  [new Date(2012, 0, 8),  96,      85],
+                  [new Date(2012, 0, 9),  100,      90],
+                  [new Date(2012, 0, 10),  105,      95],
+                  [new Date(2012, 0, 11),  110,      100],
+                  [new Date(2012, 0, 12),  113,      110],
+                  [new Date(2012, 0, 13),  114,      115],
+                  [new Date(2012, 0, 14),  ,      120],
+                  [new Date(2012, 0, 15),  ,      125],
+                  [new Date(2012, 0, 16),  ,      130],
+                  [new Date(2012, 0, 17),  ,      135],
+                  [new Date(2012, 0, 18),  ,      140],
+                  [new Date(2012, 0, 19),  ,      145]
+                ]);
+
+
+
                 var chart2 = new google.visualization.LineChart(document.getElementById('line_chart_withdrawn'));
-                chart2.draw(data, options);
+                chart2.draw(data2, options);
                 var chart3 = new google.visualization.LineChart(document.getElementById('line_chart_vulnerable'));
                 chart3.draw(data, options);
             }
@@ -161,7 +193,6 @@
         <%= render "modal" %>
 
 
-<%= link_to 'Join', join_event_path %>
                 <div class="span9">
                     
                     <div class="hero-unit">
@@ -169,7 +200,7 @@
                         <ul class="nav nav-tabs" id="myTab">
                             <li class="active"><a href="#home" data-toggle="tab">View Trends</a></li>
                             <li><a href="#edit" data-toggle="tab">Edit Data</a></li>
-                            <li><a href="#report" data-toggle="tab">Report</a></li>
+                            <!--<li><a href="#report" data-toggle="tab">Report</a></li>-->
                             <li><a href="#settings" data-toggle="tab">Settings</a></li>
                         </ul>
                         
@@ -189,7 +220,7 @@
         
                             
                             
-                            <div class="tab-pane fade" id="report">...</div>
+                            <!--<div class="tab-pane fade" id="report">...</div>-->
                             <div class="tab-pane fade" id="settings">...</div>
                         </div>
                         
