--- a/app/views/home/_edit_data.html.erb
+++ b/app/views/home/_edit_data.html.erb
@@ -2,18 +2,14 @@
 
 <div class="tab-pane fade" id="edit">
 
-                            <%= form_tag('insert_subject', :method=> "get") do %>
-    <%= check_box_tag(:enrolled) %>
-<%= label_tag(:enrolled, "Enrolled") %>
-    <%= submit_tag "Submit" %>
-<% end %>
+  
 
 
 
 
 
 
-            <form class="form-inline" action="/insert_subject" method="post">
+            <form class="form-inline" action="#" method="post">
                 <input id="quantity" type="text" class="input-small" placeholder="1" >
                     <div class="btn-group" data-toggle="buttons-checkbox">
                         <button name="enrolled" type="button" class="btn btn-primary">Enrolled</button>
