--- a/app/views/home/_edit_data.html.erb
+++ b/app/views/home/_edit_data.html.erb
@@ -2,12 +2,121 @@
 
 <div class="tab-pane fade" id="edit">
 
-  
+<div class="row-fluid">
+<div class= "span8">
+        <h4>Add Data</h4> 
+      </div>
+    </div>
+
+
+<form>
+  <fieldset>
+<div class="input-append">
+  <input class="span2" id="appendedInput" type="text" placeholder="0">
+  <span class="add-on">Enrolled</span>
+</div>
+
+<div class="input-append">
+  <input class="span2" id="appendedInput" type="text" placeholder="0">
+  <span class="add-on">Refused</span>
+</div>
+<div class="input-append">
+  <input class="span2" id="appendedInput" type="text" placeholder="0">
+  <span class="add-on">Withdrawn</span>
+</div>
+<div class="input-append">
+  <input class="span2" id="appendedInput" type="text" placeholder="0">
+  <span class="add-on">Vulnerable</span>
+</div>
+</fieldset>
+<button type="submit" class="btn btn-success">Submit</button>
+</form>
+
+<div class="row-fluid">
+<div class= "span8">
+        <h4>My Data</h4> 
+      </div>
+    </div>
+
+<table class = "table table-hover table-condensed table-bordered table-striped" style = "font-size:14px" id="data_table">
+                
+                <thead>
+                    <tr>
+                        <th style="text-align: left;">Date</th>
+                        <th>Enrolled</th>
+                        <th>Active</th>
+                        <th>Completed</th>
+                        <th>Withdrawn</th>
+                        <th>Refused</th>
+                        <th>Lost</th>
+                    </tr>
+                </thead>
+                <tr>
+                    <td style="text-align: left;"><b>Total</b>
+                      </td>
+                    <td><b>390</b></td>
+                    <td ><b>140</b></td>
+                    <td ><b>108</b></td>
+                    <td ><b>57</b></td>
+                    <td ><b>83</b></td>
+                    <td ><b>33</b></td>
+
+                </tr>
+                <tr>
+                    <td style="text-align: left;">11/21<a style = "float:right; font-size:13px" href="#">edit  </a>
+                      <i style = "float:right " class="icon-pencil"></i></td>
+                    <td>28</td>
+                    <td>15</td>
+                    <td>8</td>
+                    <td>5</td>
+                    <td>13</td>
+                    <td>3</td>
+                </tr>   
+                <tr>
+                    <td style="text-align: left;">11/14<a style = "float:right; font-size:13px" href="#">edit  </a>
+                      <i style = "float:right " class="icon-pencil"></i></td>
+                    <td>44</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>3</td>
+                    <td>24</td>
+                    <td>4</td>
+                </tr>    
+                <tr>
+                    <td style="text-align: left;">11/07<a style = "float:right; font-size:13px" href="#">edit  </a>
+                      <i style = "float:right " class="icon-pencil"></i></td>
+                    <td>28</td>
+                    <td>44</td>
+                    <td>38</td>
+                    <td>25</td>
+                    <td>24</td>
+                    <td>5</td>
+                </tr>  
+                <tr>
+                    <td style="text-align: left;">10/31<a style = "float:right; font-size:13px" href="#">edit  </a>
+                      <i style = "float:right " class="icon-pencil"></i></td>
+                    <td>28</td>
+                    <td>44</td>
+                    <td>38</td>
+                    <td>25</td>
+                    <td>24</td>
+                    <td>4</td>
+                </tr>    
+                <tr>
+                    <td style="text-align: left;">10/24<a style = "float:right; font-size:13px" href="#">edit  </a>
+                      <i style = "float:right " class="icon-pencil"></i></td>
+                    <td>210</td>
+                    <td>242</td>
+                    <td>121</td>
+                    <td>56</td>
+                    <td>55</td>
+                    <td>88</td>
+                </tr>                             
+            </table>
 
 
 
-
-
+<!--
 
             <form class="form-inline" action="#" method="post">
                 <input id="quantity" type="text" class="input-small" placeholder="1" >
@@ -128,7 +237,7 @@
                     <td style = "background-color:#d9edf7">No</td>
                 </tr>
             </table>
-            
+            -->
             
         </div>
                             
