--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -146,6 +146,7 @@ var data2 = new google.visualization.DataTable();
 
 
 
+
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container-fluid">
@@ -200,6 +201,8 @@ var data2 = new google.visualization.DataTable();
                 <div class="span9">
                     
                     <div class="hero-unit">
+
+                      <%= render "trial_data" %>
                         
                         <ul class="nav nav-tabs" id="myTab">
                             <li class="active"><a href="#home" data-toggle="tab">View Trends</a></li>
