--- a/app/views/home/_edit_data.html.erb
+++ b/app/views/home/_edit_data.html.erb
@@ -51,6 +51,7 @@
                         <th>Lost</th>
                     </tr>
                 </thead>
+
                 <tr>
                     <td style="text-align: left;"><b>Total</b>
                       </td>
@@ -62,16 +63,19 @@
                     <td ><b>33</b></td>
 
                 </tr>
+                <% @entries.each do |entry| %>
                 <tr>
-                    <td style="text-align: left;">11/21<a style = "float:right; font-size:13px" href="#">edit  </a>
-                      <i style = "float:right " class="icon-pencil"></i></td>
-                    <td>28</td>
-                    <td>15</td>
-                    <td>8</td>
-                    <td>5</td>
-                    <td>13</td>
-                    <td>3</td>
+                    <td style="text-align: left;"><%= entry.timestamp %><a style = "float:right; font-size:13px" href="#">edit  </a></td>
+                    
+                    <td><%= entry.enrolled %></td>
+                    <td><%= entry.active %></td>
+                    <td><%= entry.withdrawn %></td>
+                    <td><%= entry.refused %></td>
+                    <td>1</td>
+                    <td><%= entry.lost %></td>
                 </tr>   
+                <% end %>
+
                 <tr>
                     <td style="text-align: left;">11/14<a style = "float:right; font-size:13px" href="#">edit  </a>
                       <i style = "float:right " class="icon-pencil"></i></td>
