--- a/app/views/home/_edit_data.html.erb
+++ b/app/views/home/_edit_data.html.erb
@@ -46,6 +46,8 @@
 </div>
 <%= f.submit "Create" %>
 <% end %>
+<br />
+<button type="submit" class="btn btn-success">Create new category</button>
 
 <!--
 <form>
@@ -57,6 +59,19 @@
 <button type="submit" class="btn btn-success">Submit</button>
 
 -->
+
+<form class="form-inline" action="#" method="post">
+                <input id="quantity" type="text" class="input-small" placeholder="1" >
+                    <div class="btn-group" data-toggle="buttons-checkbox">
+                        <button name="enrolled" type="button" class="btn btn-primary">Enrolled</button>
+                        <button type="button" class="btn btn-primary">Vulnerable</button>
+                        <button type="button" class="btn btn-primary">Refused</button>
+                        <button type="button" class="btn btn-primary">Withdrawn</button>
+                        <button type="button" class="btn btn-primary">Lost</button>
+                    </div>
+                    
+                    <button type="submit" class="btn btn-success">Add Subject(s)</button>
+                    </form>
 
 
 <div class="row-fluid">
@@ -147,7 +162,7 @@
 
 
 
-<!--
+
 
             <form class="form-inline" action="#" method="post">
                 <input id="quantity" type="text" class="input-small" placeholder="1" >
@@ -161,7 +176,7 @@
                     
                     <button type="submit" class="btn btn-success">Add Subject(s)</button>
                     </form>
-            
+            <!--
             
             
             <table class = "table table-hover table-condensed table-bordered" style = "font-size:14px" id="data_table">
