--- a/app/views/home/_edit_data.html.erb
+++ b/app/views/home/_edit_data.html.erb
@@ -18,7 +18,6 @@
   <span class="add-on">Enrolled</span>
 </div>
 
-
 <div class="input-append">
   <%= f.text_field :active, :class => "span2" , :type => 'number',
               :placeholder => "0" %>
@@ -44,6 +43,7 @@
               :placeholder => "0" %>
   <span class="add-on">Lost</span>
 </div>
+<%= hidden_field :input_at, 0, :value =>Date.current() %>
 <%= f.submit "Create" %>
 <% end %>
 <br />
@@ -96,7 +96,7 @@
                 
                 <% @entries.each do |entry| %>
                 <tr>
-                    <td style="text-align: left;"><%= entry.created_at %><a style = "float:right; font-size:13px" href="#">edit  </a></td>
+                    <td style="text-align: left;"><%= entry.input_at %><a style = "float:right; font-size:13px" href="#">edit  </a></td>
                     
                     <td><%= entry.enrolled %></td>
                     <td><%= entry.active %></td>
@@ -104,7 +104,7 @@
                     <td><%= entry.withdrawn %></td>
                     <td><%= entry.refused %></td>
                     <td><%= entry.lost %></td>
-                    <td ><%= link_to "delete", :controller => "entries", :action => "delete", :date => entry.created_at %></td>
+                    <td ><%= link_to "delete", :controller => "entries", :action => "delete", :toDelete => entry.id %></td>
                 </tr> 
                 <% end %>                             
             </table>
